log
Thu Apr 16 05:35:09 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
b326ca4
Thu Apr 16 08:21:45 PM UTC 2026: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|7
total_score: 0/60
3d00f21
Thu Apr 16 08:22:19 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
f6a5356
Sun Apr 19 04:21:38 PM UTC 2026: 
 hashmap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:53:14: error: ‘map’ undeclared (first use in this function); did you mean ‘mapa’?
   53 |         free(map);
      |              ^~~
      |              mapa
hashmap.c:53:14: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c: In function ‘insertMap’:
hashmap.c:78:34: error: ‘map->buckets’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   78 |         if(strcmp(map -> buckets -> key, key) == 0) return;
      |                                  ^~
      |                   (*            )
3e00b19
Sun Apr 19 04:23:05 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:78:34: error: ‘map->buckets’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   78 |         if(strcmp(map -> buckets -> key, key) == 0) return;
      |                                  ^~
      |                   (*            )
bc18db7
Sun Apr 19 04:24:13 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
8e05315
Sun Apr 19 04:58:24 PM UTC 2026: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:100:36: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
  100 |     if(map == NULL || key == NULL) return;
      |                                    ^~~~~~
hashmap.c:99:8: note: declared here
   99 | Pair * searchMap(HashMap * map,  char * key) {
      |        ^~~~~~~~~
hashmap.c:106:81: error: passing argument 1 of ‘strcmp’ from incompatible pointer type [-Wincompatible-pointer-types]
  106 |         if(strcmp(map -> buckets[pos] -> key, key) == 0 && strcmp(map -> buckets[pos]) -> key != NULL){
      |                                                                   ~~~~~~~~~~~~~~^~~~~
      |                                                                                 |
      |                                                                                 Pair *
In file included from test.c:3:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/string.h:156:32: note: expected ‘const char *’ but argument is of type ‘Pair *’
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |                    ~~~~~~~~~~~~^~~~
hashmap.c:106:60: error: too few arguments to function ‘strcmp’
  106 |         if(strcmp(map -> buckets[pos] -> key, key) == 0 && strcmp(map -> buckets[pos]) -> key != NULL){
      |                                                            ^~~~~~
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/string.h:156:12: note: declared here
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |            ^~~~~~
3b9fdfa
Sun Apr 19 04:59:39 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:100:36: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
  100 |     if(map == NULL || key == NULL) return;
      |                                    ^~~~~~
hashmap.c:99:8: note: declared here
   99 | Pair * searchMap(HashMap * map,  char * key) {
      |        ^~~~~~~~~
1d7bb8d
Sun Apr 19 05:00:14 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 30/60
75a08a4
Sun Apr 19 10:27:44 PM UTC 2026: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘eraseMap’:
hashmap.c:125:26: error: implicit declaration of function ‘search’; did you mean ‘bsearch’? [-Wimplicit-function-declaration]
  125 |     Pair* datoEliminar = search(map, key);
      |                          ^~~~~~
      |                          bsearch
hashmap.c:125:26: error: initialization of ‘Pair *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
f42ffa5
